--- a/ShoelessJoeWebApi.App/ShoelessJoeWebApi.App.csproj
+++ b/ShoelessJoeWebApi.App/ShoelessJoeWebApi.App.csproj
@@ -17,11 +17,18 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ShoelessJoeWebApi.Core\ShoelessJoeWebApi.Core.csproj" />
     <ProjectReference Include="..\ShoelessJoeWebApi.DataAccess\ShoelessJoeWebApi.DataAccess.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Drawing.VisualStudio.15.0">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\System.Drawing.VisualStudio.15.0.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 
