--- a/ShoelessJoeWebApi.Core/ShoelessJoeWebApi.Core.csproj
+++ b/ShoelessJoeWebApi.Core/ShoelessJoeWebApi.Core.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
